Add swagger doc for add eurobank account
