# api/responses/account_responses.go
@@ -1,5 +1,5 @@
 package responses
 
-type AddAlphaBankAccountResponse struct {
-	Uri string `json:"uri" example:"https://gw.api.alphabank.eu/sandbox/auth/authorize"`
+type AddBankAccountResponse struct {
+	Uri string `json:"uri"`
 }
